# pb-autoassigner

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  Start PB AutoAssigner.command  config.ci.toml  config.example.toml  launch.sh  presentation.html  pyproject.toml
.github/workflows/: daily-run.yml
backend/: __init__.py  app.py  classify.py  cli.py  config.py  db.py  insights.py  notify.py  owners.py  pb_client.py  pipeline.py  scopes_loader.py  train.py
docs/: autopilot_rollout.md  summer_autopilot_setup.md  v2_migration_plan.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/pages/: Config.tsx  Console.tsx  Dashboard.tsx  Insights.tsx  RecentAutopilot.tsx  Reviewer.tsx  Training.tsx
launchd/: com.aidn.pb-assigner.plist
scopes/: _global.yaml  abraham_guzman.yaml  ashild_herdlevaer.yaml  erik_story.yaml  fredrik_behn.yaml  fredrik_pedersen.yaml  hanne_linaae.yaml  jens_malm.yaml  kristin_hoiaas.yaml  line_adde.yaml  sally_renshaw.yaml  sandra_otteraaen.yaml  therese_borter.yaml  viktor_ernholm.yaml
scripts/: migrate_erik_to_fredrik.py  v2_scope_check.py
skill/pb-assign/: SKILL.md
tests/: conftest.py  test_autopilot.py  test_notify.py  test_pb_client.py  test_smoke.py
